# NumericalMethodsLabs

./: .gitignore  README.md  pyproject.toml  utilities.py
1_1/: gauss.py  test.txt
1_2/: test.txt
coursework/: parallel.py
lab1_1/: gauss.py
lab1_2/: tdma.py
lab1_3/: iterative.py  test.txt
lab1_4/: eig.py
lab1_5/: test.txt
lab2_1/: nonlinear.py
lab2_2/: system.py
lab3_1/: interp.py
lab3_2/: spline.py
lab3_3/: lsm.py
lab3_4/: derivative.py
lab4_1/: cauchy.py
lab4_2/: boundary.py
sem1/coursework/: parallel.py
sem1/lab1_2/: tdma.py
sem1/lab1_3/: iterative.py
sem1/lab1_4/: eig.py  test.txt  test2.txt
sem1/lab1_5/: qr.py
sem1/lab2_1/: nonlinear.py
sem1/lab3_2/: spline.py
sem1/lab3_3/: lsm.py
sem1/lab3_4/: derivative.py
sem1/lab3_5/: integral.py
sem1/lab4_1/: cauchy.py
sem1/lab4_2/: boundary.py
sem2/lab1/: parabolic.py
sem2/lab2/: hyperbolic.py
sem2/lab3/: elliptic.py
sem2/lab4/: bidim.py
