[tool.poetry]
name = "numericalmethodslabs"
version = "0.1.0"
description = "Numerical Methods laboratory works at Moscow Aviation Institute"
authors = ["Vladimir Larkin"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
matplotlib = "^3.3.4"
fire = "^0.4.0"
scipy = "^1.6.1"
tqdm = "^4.59.0"
sympy = "^1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
